--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_singlematch"
-        android:name="com.example.sportscorer.ui.home.HomeFragment"
+        android:name="com.example.sportscorer.ui.singlematch.SingleMatchFragment"
         android:label="@string/navigation_bottom_singlematch"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_match_single" />
 
     <fragment
         android:id="@+id/navigation_qucikscorer"
-        android:name="com.example.sportscorer.ui.dashboard.DashboardFragment"
+        android:name="com.example.sportscorer.ui.quickmatch.QuickMatchFragment"
         android:label="@string/navigation_bottom_quickmatch"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_match_quick" />
 
     <fragment
         android:id="@+id/navigation_match"
-        android:name="com.example.sportscorer.ui.notifications.NotificationsFragment"
-        android:label="@string/navigation_bottom_match"
-        tools:layout="@layout/fragment_notifications" />
+        android:name="com.example.sportscorer.ui.tournament.TournamentFragment"
+        android:label="@string/navigation_bottom_tournament"
+        tools:layout="@layout/fragment_match_tournament" />
 </navigation>
