add automatic add next number

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.sportscorer.ui.post.PostViewModel" />
+            type="com.example.sportscorer.ui.adapter.post.PostViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
