--- a/app/src/main/res/layout/fragment_match_quick.xml
+++ b/app/src/main/res/layout/fragment_match_quick.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.sportscorer.ui.quickmatch.QuickMatchViewModel" />
+            type="com.example.sportscorer.ui.fragment.quickmatch.QuickMatchViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:onClick="@{() -> viewModel.changeScore(2,true,true)}"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <View
                     android:id="@+id/view_bottom_score_home_hundred"
@@ -40,7 +40,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:onClick="@{() -> viewModel.changeScore(2,true,false)}"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <TextView
                     android:id="@+id/tv_score_home_hundred"
@@ -73,7 +73,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:onClick="@{() -> viewModel.changeScore(1,true,true)}"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <View
                     android:id="@+id/view_bottom_score_home_dozen"
@@ -81,7 +81,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:onClick="@{() -> viewModel.changeScore(1,true,false)}"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <TextView
                     android:id="@+id/tv_score_home_dozen"
@@ -114,7 +114,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:onClick="@{() -> viewModel.changeScore(0,true,true)}"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <View
                     android:id="@+id/view_bottom_score_home_unit"
@@ -122,7 +122,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:onClick="@{() -> viewModel.changeScore(0,true,false)}"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <TextView
                     android:id="@+id/tv_score_home_unit"
@@ -175,6 +175,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <View
                     android:id="@+id/view_bottom_score_away_hundred"
@@ -182,6 +183,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <TextView
                     android:id="@+id/tv_score_away_hundred"
@@ -213,6 +215,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <View
                     android:id="@+id/view_bottom_score_away_dozen"
@@ -220,6 +223,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <TextView
                     android:id="@+id/tv_score_away_dozen"
@@ -251,6 +255,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <View
                     android:id="@+id/view_bottom_score_away_unit"
@@ -258,6 +263,7 @@
                     android:layout_height="0dp"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:onClick="@{(view) -> viewModel.changeScore(view)}"
                     />
                 <TextView
                     android:id="@+id/tv_score_away_unit"
