--- a/app/src/main/res/layout-land/fragment_match_quick.xml
+++ b/app/src/main/res/layout-land/fragment_match_quick.xml
@@ -14,7 +14,7 @@
             android:id="@+id/layout_score_home"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintHeight_percent="0.6"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/view_pembatas"
@@ -158,7 +158,7 @@
             android:id="@+id/layout_score_away"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintHeight_percent="0.6"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/view_pembatas"
@@ -288,12 +288,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_margin="25dp"
-            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintHeight_percent="0.3"
             app:layout_constraintDimensionRatio="1:2"
             app:layout_constraintTop_toBottomOf="@id/layout_score_home"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/layout_buttontimer_match"
+            android:layout_margin="25dp"
             >
             <View
                 android:id="@+id/view_up_round_home"
@@ -329,25 +329,66 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:background="@color/colorPrimary"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <Button
-            android:layout_width="90dp"
+        <LinearLayout
+            android:id="@+id/layout_buttontimer_match"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/layout_score_home"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp"
-            android:text="@string/reset_match"
-            android:onClick="@{()->viewModel.resetMatch()}"
-            />
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                android:text="@string/previous"
+                android:onClick="@{()->viewModel.resetMatch()}"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                android:text="@string/pause"
+                android:onClick="@{()->viewModel.resetMatch()}"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                android:text="@string/stop"
+                android:onClick="@{()->viewModel.resetMatch()}"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                android:text="@string/next"
+                android:onClick="@{()->viewModel.resetMatch()}"
+                />
+        </LinearLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_margin="25dp"
-            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintHeight_percent="0.3"
             app:layout_constraintDimensionRatio="1:2"
             app:layout_constraintTop_toBottomOf="@id/layout_score_home"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/layout_buttontimer_match"
             >
             <View
                 android:id="@+id/view_up_round_away"
